<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/yourProfile"

        android:textSize="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:text="@string/yourProfile"/>

    <TextView
        android:id="@+id/yourName"
        android:layout_row="1"
        android:text="@string/yourName"
        />

    <EditText
        android:id="@+id/typeName"
        android:layout_width="match_parent"
        android:layout_row="2"
        android:hint="@string/typeName"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/yourEmail"
        android:layout_row="3"
        android:text="@string/email_text"
        />

    <EditText
        android:id="@+id/email2"
        android:layout_width="match_parent"
        android:layout_row="4"
        android:hint="@string/email2"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/yourPic"
        android:layout_row="5"
        android:text="@string/yourPic"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:src="@android:drawable/picture_frame"
        android:layout_row="6"
        android:layout_width="match_parent"
        />

    <TextView
        android:id="@+id/click_text"
        android:layout_row="7"
        android:text="@string/click_text"/>


</GridLayout>