<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/email_text"
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:text="@string/email_text" />
    <EditText
        android:id="@+id/email"
        android:layout_row="1"
        android:layout_width="match_parent"
        android:textSize="20dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/password_text"
        android:textSize="30dp"
        android:layout_row="2"
        android:hint="@string/password_text" />

    <EditText
        android:id="@+id/password"
        android:layout_row="3"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:hint=" "/>

    <Button
        android:id="@+id/log_in_butt"
        android:layout_row="4"
        android:layout_width="match_parent"
        android:textSize="30dp"
        android:hint="@string/logIn" />


</GridLayout>